--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <!-- custom css -->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <div class="header"><img src="images/logo.svg" alt=""></div>
   <div class="header-download">
     <h1>A history of everything you copy</h1>
     <p>Clipboard allows you to track and organize everything you 
